[package]
name = "growatt_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "sync","time"] }
tokio-modbus = "0.16.1"
tokio-serial = "5.4.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
console-subscriber = "0.4.1"
rumqttc = "0.24.0"
anyhow = "1.0.98"
chrono = "0.4.41"